--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -88,7 +88,7 @@
         <i class="weather-icon owf"></i>
         <div class="temperature"></div>
         <div class="weather-description"></div>
-        <a style="color:black" class="navbar-brand" href="#">Made by NK</a>
+        <a style="color:black" class="navbar-brand" href="#">Made by Tiger</a>
 
       </nav>
     </footer>
