--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 
 {{#if Authenticated}}
-<div class="flex justify-center container" style="margin: 10px;">
+<div class="flex  container" style="margin: 10px;">
   <button class="btn yandexBtn" id="naHatu">На хату</button>
   <button class="btn yandexBtn" id="nablatHatu">На блатхату</button>
   <button class="btn yandexBtn" id="vKlub">В клуб</button>
@@ -9,9 +9,9 @@
   <button class="btn" id="seeTigr">Посмотреть на тигра</button>
 
 </div>
-  <div class="container"  style="width: 200vh; height: 350px;" id="map"></div>
+  <div class="container"  style="width: 100%; height: 450px;" id="map"></div>
 {{else}}
-  <div class="flex justify-center container" style="margin: 10px;">
+  <div class="flex container" style="margin: 10px;">
   <button class="btn unauthBtn" id="naHatu">На хату</button>
   <button class="btn unauthBtn" id="nablatHatu">На блатхату</button>
   <button class="btn unauthBtn" id="vKlub">В клуб</button>
