--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,11 @@ html, body, #map {
   padding: 0;
   margin: 0;
 }
+
+body {
+  min-height: 100vh;
+}
+
 img {
   width: 100%;
   height: 100%;
@@ -63,3 +68,8 @@ img {
   background-size: 100% 100%;
   color: white;
 }
+
+.city {
+  height: 37px;
+}
+
