--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -26,12 +26,7 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        {{! <a class="navbar-brand" href="#">TigerSite</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button> }}
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="/">Home
@@ -66,14 +61,13 @@
 
     <footer>
       <nav
-        class="navbar d-flex justify-content-between fixed-bottom navbar-dark bg-light"
+        class="footerClass navbar d-flex justify-content-between fixed-bottom navbar-dark bg-light"
       >
         <form id="getWeather">
           <select
-            class="form-select city"
+            class="form-select city "
             id="inputGroupSelect04"
             aria-label="Example select with button addon"
-            style="height: 35px;"
           >
             <option selected value="Санкт-Петербург">Санкт-Петербург</option>
             <option value="Сочи">Сочи</option>
